feat(nfrt): 1.20.2-neoforge 线全量 mod 面平铺——NFRT 直驱工件/资产/运行面三通
build.nfrt.gradle.kts 从 POC stub 扩为全量线脚本（证据=MDG 2.0.141 源码逐旗标对齐）：
- 工件面：createMinecraftArtifacts 追加 clientResources 请求（CreateMinecraftArtifacts.java:345-346）；
  产物命名按 ArtifactNamingStrategy.createNeoForge——游戏 jar 必须名 neoforge-<v>.jar
  （ForgeUserdevLaunchHandler 按 neoforge- 前缀定位主 jar，runServer 首跑实证）、
  资源 jar 名 client-extra-<v>.jar（FML 防误认主 jar）；
- 资产面：downloadAssets 任务（DownloadAssets.java:96-113 download-assets --write-properties）；
- 编译面：config.json libraries（非传递清单）+ minecraft-dependencies 聚合件
  （mojang-meta 仓库，RepositoriesPlugin.java:46-53 同源；variant 属性 dist=client/
  usage=java-api/category=library 精确选中 clientCompileDependencies）；
- 运行面：userdev config.json runs.{client,server} 直驱 BootstrapLauncher（jvmArgs {modules}
  插值/props -D 全量/legacyClassPath.file/modid%%dir MOD_CLASSES=RunUtils:270-299 格式），
  legacyClasspath.txt（WriteLegacyClasspath.java:38-57 同构）+ log4j2.xml（RunUtils:61-142 模板）；
- slf4j-api 钉版：MC version json {strictly 2.0.7} × FML 清单 2.0.9 死锁（MDG 无 1.20.2 先例），
  以 FML 清单为准 eachDependency 压制。

平台 1.20.2 代差（NFRT 产物 20.2.93 jar javap 实证，FML 1.0.16 代）：
- capabilities=common.capabilities 血统、网络=SimpleChannel（20.4 registration/handling 包缺席）
  → 新增 src/neoforge-1202 代树（forge 1.20.1 线同构实现的 neoforge 包名移植；异包孪生
  platform.neoforge1202——exclude 按相对路径双杀同名 RAW 文件，212 树先例）；
  SimpleChannel 消费面 20.2 差异：handler 直收 Context 非 Supplier、MessageEncoder/Decoder
  独立函数接口（encoder::accept/decoder::apply 桥接）、NetworkDirection→PlayNetworkDirection；
- mods.toml 依赖表 FML 1.0.x 格式 mandatory=true（20.5+ FML 2.0 才是 type=required；
  ModInfo$ModVersion 'Missing required field mandatory' 实证），processResources 按线换写；
- 共享源 1.20.3 分代边界新移：Blocks.GRASS/SHORT_GRASS、Checkbox 构造器 vs builder、
  Scoreboard.getOrCreatePlayerScore String 形、能力查询 LazyOptional.resolve() 形
  （(forge && >=1.16.2) || (neoforge && <1.20.3) 括号面——stonecutter 混合链需显式括号）。

验收：compileJava+build EXIT=0（jar 46MB 口径=ImageStream 内嵌+mods.toml/pack 18 正确）；
tour 16 屏全绿（worldjoin beat 